@@ -3,6 +3,8 @@ Nov 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - Add small timeout to catch replies with multiple packets in xqf-rcon
 - Make xqf-recon optionally read the rcon passwort from the environment
   variable XQF_RCON_PASSWORD
+- Honor osmask of Doom3 servers and check for Linux support
+  (suggested by TTimo)
 
 Nov 13, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - update German translation
